packages/lustre-v6.6.103.3/test/should_fail/assert/s.lus
node s (a,b:int) returns (t:int);
let
  assert a=0;
	t=b;
tel
